adding and refactoring: mixins, actions, components directory

--- a/styles/font-face.scss
+++ b/styles/font-face.scss
@@ -1,4 +1,6 @@
 @font-face {
-  font-family: "Vikings";
-  src: url("../fonts/VikingsFont.ttf") format("truetype");
+  font-family: 'Hogwarts';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Hogwarts.ttf'), url('../fonts/Hogwarts.woff') format('woff');
 }
