--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
 @import "./font-face";
 @import "./variables";
 @import "./normalize";
+@import "./actions";
 
 main {
   min-height: 100vh;
@@ -11,153 +12,7 @@ main {
   margin: 0 auto;
 }
 
-.hero {
-  position: relative;
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
+@import "./components/hero";
 
-  &:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    box-shadow: inset 0 0 80px 40px rgba(0, 0, 0, 0.5);
-    z-index: $z-index-5;
-  }
-  //background-image: url("../img/base-background.jpg");
-}
 
-#sparkCanvas {
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  max-width: 100vw;
-  height: 100%;
-  z-index: $z-index-3;
-  will-change: transform;
-  transition: $transition;
-}
 
-.wrapper-base,
-.wrapper-front-left,
-.wrapper-front-right,
-.wrapper-front-center,
-{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 100vh;
-  width: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.wrapper-logo {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 150px;
-  margin: auto;
-  height: 250px;
-  width: 700px;
-  animation: pulse 5s infinite;
-  transition: $transition;
-  transform: translate3d(0, calc(var(--scroll) / 7), 0);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-image: url("../img/legacy-logo.png");
-  z-index: $z-index-1;
-}
-
-.wrapper-base {
-  background-image: url("../img/base-background.jpg");
-  z-index: $z-index-1;
-  transition: $transition;
-  transform: translate3d(0, calc(var(--scroll) / 1.5), 0);
-}
-
-.wrapper-front-left {
-  background-image: url("../img/front-background-left.png");
-  z-index: $z-index-2;
-  transition: $transition;
-  transform: translate3d(calc(var(--scroll) / -9), calc(var(--scroll) / 5), 0);
-}
-
-.wrapper-front-right {
-  background-image: url("../img/front-background-right.png");
-  z-index: $z-index-2;
-  transition: $transition;
-  transform: translate3d(calc(var(--scroll) / 5), calc(var(--scroll) / 12), 0);
-}
-
-.wrapper-front-center {
-  background-image: url("../img/front-background-center.png");
-  transition: $transition;
-  transform: translate3d(0, calc(var(--scroll) / 15), 0);
-  z-index: $z-index-4;
-}
-
-.effects {
-  position: absolute;
-  top: 62%;
-  left: 49%;
-  z-index: $z-index-2;
-  will-change: transform;
-  transform: translate(-50%, -50%);
-  animation: effectRotateAndScale 25s infinite linear alternate;
-}
-
-@keyframes effectRotateAndScale {
-  0% {
-    transform: rotate3d(0, 0, 0, 0) scale3d(1, 1, 1);
-  }
-  20% {
-    transform: rotate3d(0, 0, 1, 100deg) scale3d(1.4, 1.4, 1.4);
-  }
-  40% {
-    transform: rotate3d(0, 0, 1, 150deg) scale3d(1.2, 1.2, 1);
-  }
-  60% {
-    transform: rotate3d(0, 0, 1, 200deg) scale3d(1, 1, 1);
-  }
-  80% {
-    transform: rotate3d(0, 0, 1, 250deg) scale3d(1.5, 1.3, 1.3);
-  }
-  100% {
-    transform: rotate3d(0, 0, 1, 360deg) scale3d(1.2, 1.3, 1.3);
-  }
-}
-
-@keyframes pulse {
-  0% {
-    opacity: 1;
-    transform: scale3d(1, 1, 1);
-  }
-  50% {
-    opacity: 0.6;
-    transform: scale3d(1.02, 1.02, 1.02);
-  }
-  100% {
-    opacity: 1;
-    transform: scale3d(1, 1, 1);
-  }
-}
-
-//.header {
-//  max-width: 100%;
-//  background: rgba(0, 0, 0, 0.25);
-//  box-shadow: 0 4px 10px 10px rgba(0, 0, 0, 0.25);
-//}
-
-//.section {
-//  background-position: center top;
-//  background-repeat: no-repeat;
-//  background-size: cover;
-//}
