--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -12,4 +12,5 @@ $z-index-4: 4;
 $z-index-5: 5;
 $z-index-6: 6;
 
-$transition: transform 1.5s cubic-bezier(0.075, 0.5, 0, 1);
+$transition-parallax: transform 1.5s cubic-bezier(0.075, 0.5, 0, 1);
+$transition-link: color 0.25s cubic-bezier(.2,.78,.83,.67);
