--- a/styles/style.css
+++ b/styles/style.css
@@ -106,6 +106,33 @@ main {
   margin: 0 auto;
 }
 
+.wrapper-earth {
+  position: relative;
+  width: 100%;
+  height: 80px;
+}
+
+.earth {
+  position: absolute;
+  top: -80px;
+  left: 0;
+  width: 100%;
+  height: 180px;
+  background-image: url("../img/earth-background.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 5;
+}
+
+.about {
+  background-image: url("../img/background-large.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  min-height: 1000px;
+}
+
 .hero {
   position: relative;
   height: 100vh;
@@ -188,7 +215,7 @@ main {
   height: 100%;
   z-index: 3;
   will-change: transform;
-  transition: transform 1.5s cubic-bezier(0.075, 0.5, 0, 1);
+  transition: transform 2s cubic-bezier(0.1, 0.5, 0, 1);
 }
 
 .wrapper-base,
@@ -215,7 +242,7 @@ main {
   height: 250px;
   width: 700px;
   animation: pulse 5s infinite;
-  transition: transform 1.5s cubic-bezier(0.075, 0.5, 0, 1);
+  transition: transform 2s cubic-bezier(0.1, 0.5, 0, 1);
   transform: translate3d(0, calc(var(--scroll) / 7), 0);
   background-position: center;
   background-repeat: no-repeat;
@@ -227,35 +254,35 @@ main {
 .wrapper-base {
   background-image: url("../img/base-background.jpg");
   z-index: 1;
-  transition: transform 1.5s cubic-bezier(0.075, 0.5, 0, 1);
+  transition: transform 2s cubic-bezier(0.1, 0.5, 0, 1);
   transform: translate3d(0, calc(var(--scroll) / 1.5), 0);
 }
 
 .wrapper-front-left {
   background-image: url("../img/front-background-left.png");
   z-index: 2;
-  transition: transform 1.5s cubic-bezier(0.075, 0.5, 0, 1);
+  transition: transform 2s cubic-bezier(0.1, 0.5, 0, 1);
   transform: translate3d(calc(var(--scroll) / -9), calc(var(--scroll) / 5), 0);
 }
 
 .wrapper-front-right {
   background-image: url("../img/front-background-right.png");
   z-index: 2;
-  transition: transform 1.5s cubic-bezier(0.075, 0.5, 0, 1);
-  transform: translate3d(calc(var(--scroll) / 12), calc(var(--scroll) / -7), 0);
+  transition: transform 2s cubic-bezier(0.1, 0.5, 0, 1);
+  transform: translate3d(calc(var(--scroll) / 12), calc(var(--scroll) / 4), 0);
 }
 
 .wrapper-front-center {
   background-image: url("../img/front-background-center.png");
-  transition: transform 1.5s cubic-bezier(0.075, 0.5, 0, 1);
-  transform: translate3d(0, calc(var(--scroll) / 15), 0);
+  transition: transform 2s cubic-bezier(0.1, 0.5, 0, 1);
+  transform: translate3d(0, calc(var(--scroll) / 13), 0);
   z-index: 4;
 }
 
 .effects {
   position: absolute;
   top: 62%;
-  left: 49%;
+  left: 48%;
   z-index: 2;
   will-change: transform;
   transform: translate(-50%, -50%);
