--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,6 +12,32 @@ main {
   margin: 0 auto;
 }
 
+.wrapper-earth {
+  position: relative;
+  width: 100%;
+  height: 80px;
+}
+
+.earth {
+  position: absolute;
+  top: -80px;
+  left: 0;
+  width: 100%;
+  height: 180px;
+  background-image: url("../img/earth-background.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: $z-index-5;
+}
+.about {
+  background-image: url("../img/background-large.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  min-height: 1000px;
+}
+
 @import "./components/hero";
 
 
